--- a/src/main/resources/templates/add-recipe.html
+++ b/src/main/resources/templates/add-recipe.html
@@ -35,7 +35,7 @@
 
 
         <label th:for="category">Category:</label>
-        <select id="category" class="form-control">
+        <select id="category" th:field="*{category}" class="form-control">
             <option value="" disabled selected>Select category</option>
             <option th:each="cat : ${categories}"
                     th:value="${cat}"
