--- a/src/main/resources/templates/commons.html
+++ b/src/main/resources/templates/commons.html
@@ -20,8 +20,8 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link" th:href="@{/}">All Recipes</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Breakfast</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Lunch</a></li>
+                <li class="nav-item"><a class="nav-link" th:href="@{/recipe/breakfast}">Breakfast</a></li>
+                <li class="nav-item"><a class="nav-link" th:href="@{/recipe/lunch}">Lunch</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Dinner</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Meal Plans</a></li>
                 <li class="nav-item"><a class="nav-link" th:href="@{/recipes/add}">Add Recipe</a></li>
