--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,14 +12,14 @@
         <div class="col-md-6">
             <div class="card shadow-lg p-4">
                 <h2 class="text-center mb-4 fw-bold">Login</h2>
-                <form th:action="@{/users/register}" th:method="post" th:object="${userRegisterDTO}">
+                <form th:action="@{/users/login}" th:method="post" th:object="${userRegisterDTO}">
 
                     <!-- Email -->
                     <div class="mb-3">
-                        <label class="form-label">Email</label>
-                        <input type="email" class="form-control" th:field="*{email}" required>
-                        <small class="text-danger" th:if="${#fields.hasErrors('email')}"
-                               th:errors="*{email}"></small>
+                        <label class="form-label">Username</label>
+                        <input type="text" class="form-control" th:field="*{username}" required>
+                        <small class="text-danger" th:if="${#fields.hasErrors('username')}"
+                               th:errors="*{username}"></small>
                     </div>
                     <!-- Password -->
                     <div class="mb-3">
