--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -7,9 +7,9 @@
 <div th:replace="~{commons :: navbar}"></div>
 
 <div class="container">
-    <h2>Add a New Recipe</h2>
+    <h2>Amend Recipe</h2>
 
-    <form th:action="@{/recipes/update/{id}(id=*{id})}" th:method="PATCH" th:object="${recipe}"
+    <form th:action="@{/recipe/update/{id}(id=*{id})}" th:object="${recipe}" th:method="PATCH">
           enctype="multipart/form-data" class="recipe-form">
 
         <label for="title">Recipe Title:</label>
@@ -17,7 +17,7 @@
 
 
         <label th:for="category">Category:</label>
-        <select id="category" th:field="*{category}" class="form-control">
+        <select id="category" name="category" class="form-control">
             <option value="" disabled selected>Select category</option>
             <option th:each="cat : ${categories}"
                     th:value="${cat}"
@@ -30,23 +30,21 @@
 
 
         <label th:for="description">Description:</label>
-        <textarea id="description" name="description" th:field="*{description}"
-                  th:errorclass="'is-invalid alert-danger'" required></textarea>
+        <input type="text" id="description" name="description" th:field="*{description}"
+                  th:errorclass="'is-invalid alert-danger'" required/>
         <small class="invalid-feedback text-danger">Error 2</small>
 
-        <label for="ingredients">Ingredients:</label>
-        <textarea id="ingredients" name="ingredients" required></textarea>
 
         <label for="instructions">Instructions:</label>
-        <textarea id="instructions" name="instructions" required></textarea>
+        <input type="text" id="instructions" th:field="*{instructions}" name="instructions" required/>
 
         <label for="imageUrl">Image URL:</label>
-        <textarea id="imageUrl" name="imageUrl" required></textarea>
+        <input type="text" id="imageUrl" name="imageUrl" required th:field="*{imageUrl}"/>
 
         <!--    <label for="image">Recipe Image:</label>-->
         <!--    <input type="file" id="image" name="image" accept="image/*" required>-->
 
-        <button type="submit" class="submit-btn">Submit Recipe</button>
+        <button type="submit" class="submit-btn">Update Recipe</button>
     </form>
 </div>
 
