--- a/src/main/resources/templates/commons.html
+++ b/src/main/resources/templates/commons.html
@@ -49,7 +49,7 @@
                 <th:block sec:authorize="isAuthenticated()">
                     <form th:method="POST"
                           th:action="@{/users/logout}">
-                        <input class="btn btn-link" type="submit" value="Logout"/>
+                        <input class="nav-link" type="submit" value="Logout"/>
                     </form>
                 </th:block>
 
@@ -81,5 +81,5 @@
 
 </body>
 
-<footer th:fragment="footer">Test</footer>
+<footer th:fragment="footer"></footer>
 </html>
