--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -48,14 +48,16 @@
 
 <!--    </form>-->
 
-    <a th:href="@{/recipe/update/{id}(id=${id})}" class="btn btn-link">Update</a>
+    <a th:href="@{/recipe/update/{id}(id=${id})}" class="nav-link"><strong>Update</strong></a>
 
     <form th:action="@{/recipe/details/{id}(id=*{id})}" th:method="DELETE">
-        <button type="submit" class="btn btn-link">Delete</button>
+        <button class="nav-link" type="submit"><strong>Delete</strong></button>
     </form>
 
 
 </div>
 
+<div th:replace="~{commons :: footer}"></div>
 </body>
+
 </html>
