--- a/src/main/resources/templates/commons.html
+++ b/src/main/resources/templates/commons.html
@@ -45,6 +45,9 @@
                 <th:block sec:authorize="hasRole('ADMIN')">
                     <li class="nav-item"><a class="nav-link" th:href="@{/users/admin}">Admin</a></li>
                 </th:block>
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item"><a class="nav-link" th:href="@{/about}">About</a></li>
+                </ul>
 
                 <th:block sec:authorize="isAuthenticated()">
                     <form th:method="POST"
