--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -35,6 +35,7 @@
         </div>
     </div>
 </div>
-
+<div th:replace="~{commons :: footer}"></div>
+<div th:replace="~{commons :: scripts}"></div>
 </body>
 </html>
