--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+<head th:replace="~{commons :: head}"></head>
 <body>
+<div th:replace="~{commons :: navbar}"></div>
 
+
+
+
+
+<footer th:fragment="footer"></footer>
+<div th:replace="~{commons :: scripts}"></div>
 </body>
 </html>
