--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -436,7 +436,13 @@ footer {
     margin-top: auto;
 }
 
+.card-title {
+    font-weight: 600;
+}
 
+.list-group-item {
+    font-size: 16px;
+}
 
 @media (max-width: 768px) {
     .container {
